[gd_scene load_steps=5 format=3 uid="uid://bgtv02vp8m02u"]

[ext_resource type="PackedScene" uid="uid://cbxbq3tqvvn8j" path="res://scenes/map.tscn" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://b488pqxmi1nd" path="res://scripts/game.gd" id="1_yqjtg"]
[ext_resource type="Script" uid="uid://c7cpk53lm0010" path="res://scripts/bullet_manager.gd" id="4_lbhrr"]
[ext_resource type="Script" uid="uid://dwjf7tnmwhhfn" path="res://scripts/signal_bus.gd" id="9_0tnpc"]

[node name="Game" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(750, 1000)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1170.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqjtg")

[node name="Map" parent="." instance=ExtResource("1_uwrxv")]

[node name="SignalBus" type="Node" parent="."]
script = ExtResource("9_0tnpc")

[node name="BulletManager" type="Node2D" parent="."]
script = ExtResource("4_lbhrr")

[node name="TowerContainer" type="Node" parent="."]

[node name="ConstantIncomeTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="ConstantIncomeTimer" to="." method="_on_constant_income_timer_timeout"]
